--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>BlogIt</title>
+    <title>LogIt</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
